* Added a spring-web-test-client module which let's you unit test Spring Webflux Controllers using the REST Assured DSL. Depend on artifact id "spring-web-test-client" using group id "io.rest-assured" from Maven to use it. Then use io.restassured.module.webtestclient.RestAssuredWebTestClient to get started (thanks to Olga Maciaszek-Sharma for pull request)

Changelog 3.1.1 (2018-08-17)
----------------------------
* Ensure RequestSpecBuilder picks up static config (issue 1012). (thanks to Peter Major for pull request)
* Support multiple 'Set-Cookie' headers in a response (issue 1016). (thanks to runtarinn for pull request)
* Fixed OAuth 1 for GET requests (thanks to Corneliu Duplachi for pull request)
* Add detailed cookie matching to RequestSpecBuilder (thanks to Peter Major for pull request)
* Add File Size to InputStreamEntity (issue 988) (thanks to vjykumar for pull request)
* Properly encodes JSON from InputStream (issue 1040) (thanks to Maksymilian Pawlak for pull request)
* Implemented ability to add headers to a multipart using the MultiPartSpecBuilder

Changelog 3.1.0 (2018-04-20)
-----------------------------
* Fixed generics handling of the detailed cookie matcher (thanks to Rafał Siwiec for pull request)
* Now using Type instead of Class in the API for mapping to Java Objects. For users of the REST Assured API the change is most prominent in the
  "ResponseBodyExtractionOptions" interface where the "as" method now takes a "java.lang.Type" instead of "java.lang.Class". This should not cause
  any backward incompatibilities. However this change also applies to ObjectMapperFactory's where there is a chance of backward incompatibilities
  to arise. For example if you previously had a custom JAXBObjectMapperFactory that looked like this:

     public class MyJAXBObjectMapperFactory implements JAXBObjectMapperFactory {
        public JAXBContext create(Class cls, String charset) {
            ...
        }
     }

  you now need to change it to:
