@@ -3,6 +3,10 @@ sudo: false
 
 jdk:
   - oraclejdk8
+  - openjdk11
 
 script:
+  - jdk_switcher use oraclejdk8
+  - mvn clean install -B -P osgi-tests
+  - jdk_switcher use openjdk11
   - mvn clean install -B
