@@ -57,7 +57,7 @@
     <properties>
         <scm.branch>master</scm.branch>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <groovy.version>2.4.12</groovy.version>
+        <groovy.version>2.4.15</groovy.version>
         <gmaven.version>1.5</gmaven.version>
         <hamcrest.version>1.3</hamcrest.version>
         <jackson1.version>1.9.11</jackson1.version>
@@ -153,8 +153,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
+                    <source>1.6</source>
+                    <target>1.6</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
@@ -265,6 +265,31 @@
                 <artifactId>jaxb-api</artifactId>
                 <!-- Don't upgrade to 2.3.x since it requires Java 7+ -->
                 <version>2.2.12</version>
+            </dependency>
+            <!--<dependency>-->
+                <!--<groupId>com.sun.xml.bind</groupId>-->
+                <!--<artifactId>jaxb-impl</artifactId>-->
+                <!--<version>2.2.11</version>-->
+            <!--</dependency>-->
+            <!--<dependency>-->
+                <!--<groupId>com.sun.xml.bind</groupId>-->
+                <!--<artifactId>jaxb-core</artifactId>-->
+                <!--<version>2.2.11</version>-->
+            <!--</dependency>-->
+            <dependency>
+              <groupId>com.sun.xml.bind</groupId>
+              <artifactId>jaxb-osgi</artifactId>
+              <version>2.2.10</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.activation</groupId>
+                <artifactId>activation</artifactId>
+                <version>1.1.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.sling</groupId>
+                <artifactId>org.apache.sling.javax.activation</artifactId>
+                <version>0.1.0</version>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
