@@ -74,6 +74,16 @@
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-osgi</artifactId>
+        </dependency>
+        <!-- Note that we're not using the standard 'javax.activation:activation:1.1.1' since it doesn't work with OSGi-->
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.javax.activation</artifactId>
+        </dependency>
+        
         <!-- Test -->
         <dependency>
             <groupId>org.hamcrest</groupId>
