@@ -4,6 +4,9 @@ Changelog next version
 * Make it clear that junit is only a test scope dependency (thanks to Eric Pabst for pull request)
 * Changed MockMvcParamConfig.attributeUpdateStrategy() to actually return the attributeUpdateStrategy and not the formParamsUpdateStrategy.
 * Added a spring-web-test-client module which let's you unit test Spring Webflux Controllers using the REST Assured DSL. Depend on artifact id "spring-web-test-client" using group id "io.rest-assured" from Maven to use it. Then use io.restassured.module.webtestclient.RestAssuredWebTestClient to get started (thanks to Olga Maciaszek-Sharma for pull request)
+* Upgraded to from Groovy 2.4.12 to 2.4.15
+* Upgraded Scala from version 2.11.12 to 2.12.7, this also means that the Scala support module now requires Java 8.
+* Rest Assured now requires Java 6 (previously Java 5 was required).
 
 Changelog 3.1.1 (2018-08-17)
 ----------------------------
